Updated by task 'AUTO_TM_MT_1761243618276' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/d121a8cace36fb8b1879769c33e9884b79c91d4a

--- a/c-legacy-releases/2025/02122025.md
+++ b/c-legacy-releases/2025/02122025.md
@@ -1,15 +1,15 @@
 ---
-title: Central發行說明 — 2025年2月
+title: 中央發行說明 - 2025 年 2 月
 description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: February 2025
 author: mfrei
 mini-toc-levels: 2
 exl-id: 617cf24b-d069-4dff-8ac0-9dacedef3f23
-source-git-commit: 689a26dfa3c681ef91016ed0e0b201254a6054a6
+source-git-commit: 828aac334fdc401738e4934263345b76761a3ae8
 workflow-type: tm+mt
-source-wordcount: '3514'
-ht-degree: 99%
+source-wordcount: '3493'
+ht-degree: 100%
 
 ---
 
@@ -19,9 +19,7 @@ ht-degree: 99%
 
 <!-- ![Banner](assets/release-notes-header.png) -->
 
-[Experience League](https://experienceleague.adobe.com/zh-hant#home) 可幫助您了解 Experience Cloud 及 Adobe 企業應用程式。為了獲得最佳體驗，請登入並在我們的免費資源庫中自訂搜尋。
-
-* **持續通知：**&#x200B;若要收到關於此頁面更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
+[Experience League](https://experienceleague.adobe.com/#home) 可幫助您了解 Experience Cloud 及 Adobe 企業應用程式。為了獲得最佳體驗，請登入並在我們的免費資源庫中自訂搜尋。
 
 * **留下意見反應：**&#x200B;尋找每篇文章或影片底部的「**_這些內容對您有幫助嗎？_**」快顯視窗。您的意見反應會經過整理後傳遞給內容作者。
 
@@ -67,7 +65,7 @@ ht-degree: 99%
 
 **個人化首頁**
 
-全新的 [Experience League 首頁](https://experienceleague.adobe.com/zh-hant?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
+全新的 [Experience League 首頁](https://experienceleague.adobe.com/?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
 
 主要功能：
 
@@ -85,7 +83,7 @@ ht-degree: 99%
 
 +++詳細資料
 
-檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
+檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
 
 +++
 
@@ -158,8 +156,8 @@ ht-degree: 99%
 | 2025 年 1 月 | [欄位未顯示於 [!DNL AEP Segment Builder]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25544) | 新文章 | 了解如何解決即使成功擷取資料後，資料集中的屬性或欄位也未出現在 [!DNL Adobe Experience Platform] [!DNL Segment Builder] 中的問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Experience Platform]：過時的範例設定檔](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25549) | 新文章 | 了解如何解決 [!DNL Adobe Experience Platform] 中的範例設定檔過時的問題，這可能會導致客群設定檔不準確。 |
 | 2025 年 1 月 |  [!DNL Adobe Experience Platform] 的[[!UICONTROL 啟動/資料收集]功能在 [!DNL Safari 17] 無痕模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25416)下未運作 | 新文章 | 了解如何解決在無痕模式下使用 [!DNL Safari 17] 時，因 [!DNL Adobe Experience Platform] 的[!UICONTROL 啟動/資料收集]功能無法啟動而妨礙 [!DNL Analytics] 資料擷取的問題。 |
-| 2025 年 1 月 |  [!DNL AEP][&#128279;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25468)中的[!DNL Jupyter Notebooks] 環境存取問題 | 新文章 | 了解如何解決 Adobe Experience Platform 中的 [!DNL Jupyter Notebooks] 環境[!DNL Data Science Workspace]變得無法存取並顯示逾時錯誤的問題。 |
-| 2025 年 1 月 | [&#x200B; [!DNL Adobe Launch ("Tags")] 版本在 [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25531)中無法傳播的問題 | 新文章 | 了解如何解決 [!DNL Adobe Launch] (Experience Platform 標記) 版本無法正確傳播的問題，確保能有效地對所有網站訪客顯示更新內容。 |
+| 2025 年 1 月 |  [!DNL AEP]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25468)中的[[!DNL Jupyter Notebooks] 環境存取問題 | 新文章 | 了解如何解決 Adobe Experience Platform 中的 [!DNL Jupyter Notebooks] 環境[!DNL Data Science Workspace]變得無法存取並顯示逾時錯誤的問題。 |
+| 2025 年 1 月 | [ [!DNL Adobe Launch ("Tags")] 版本在 [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25531)中無法傳播的問題 | 新文章 | 了解如何解決 [!DNL Adobe Launch] (Experience Platform 標記) 版本無法正確傳播的問題，確保能有效地對所有網站訪客顯示更新內容。 |
 | 2025 年 1 月 | [了解  [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25522) 中的  [!DNL GDPR]  隱私要求延遲 | 新文章 | 了解如何解決處理在 [!DNL Adobe Experience Platform] 內刪除行銷活動資料的 [!DNL GDPR] 隱私要求時的延遲問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Experience Platform]：失敗的身分識別計數與目標啟用似乎不成比例](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25658) | 新文章 | 了解如何解決失敗的身分識別計數與目標啟用似乎不成比例的問題。 |
 
@@ -209,8 +207,8 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|January 2025|[Adobe [!DNL Analytics] & CJA: Quick Start for Basic to Intermediate Analysis Capabilities](https://experienceleague.adobe.com/zh-hant/docs/events/adobe-customer-success-webinar-recordings/2024/basic-to-intermediate-analysis-capabilities)|Event |Learn about Adobe [!DNL Analytics] and [!DNL Customer Journey Analytics] with a focus on basic to intermediate analysis capabilities.|
-|January 2025|[AEP Web SDK Troubleshooting, Assurance, and Tips and Tricks](https://experienceleague.adobe.com/zh-hant/docs/events/tech-sessions/2024/rtcdp-office-hours-2024/aep-web-sdk-troubleshooting)|Event |Gain insights into troubleshooting, assurance, and tips and tricks for the Adobe [!DNL Experience Platform] (AEP) Web SDK.| -->
+|January 2025|[Adobe [!DNL Analytics] & CJA: Quick Start for Basic to Intermediate Analysis Capabilities](https://experienceleague.adobe.com/en/docs/events/adobe-customer-success-webinar-recordings/2024/basic-to-intermediate-analysis-capabilities)|Event |Learn about Adobe [!DNL Analytics] and [!DNL Customer Journey Analytics] with a focus on basic to intermediate analysis capabilities.|
+|January 2025|[AEP Web SDK Troubleshooting, Assurance, and Tips and Tricks](https://experienceleague.adobe.com/en/docs/events/tech-sessions/2024/rtcdp-office-hours-2024/aep-web-sdk-troubleshooting)|Event |Gain insights into troubleshooting, assurance, and tips and tricks for the Adobe [!DNL Experience Platform] (AEP) Web SDK.| -->
 
 ### 新的 Adobe [!DNL Analytics] 支援知識庫{#kb-analytics}
 
@@ -271,7 +269,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/overview)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
-* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
 * [[!DNL Experience Manager] Cloud Manager 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-manager/content/release-notes/current)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/zh-hant/docs/aem-forms-automated-conversion-service/using/release-notes)
@@ -282,7 +280,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 
 ### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
-針對[!DNL Experience Manager as a Cloud Service]發佈的新影片和書面教學課程。
+針對 [!DNL Experience Manager as a Cloud Service].，已發佈新的教學影片和書面教學課程。
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
@@ -300,7 +298,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 | 2025 年 1 月 | [語言搜尋篩選無法在  [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)] 中正常運作](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25501) | 新文章 | 了解如何解決 [!DNL Adobe Experience Manager as a Cloud Service] 中的語言搜尋篩選器在嘗試依語言名稱搜尋資產時無法如預期運作的問題。 |
 | 2025 年 1 月 | [[!DNL Adobe Asset Link plug-in] 網路錯誤：*[!DNL server is unreachable]*](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25506) | 新文章 | 了解如何解決 [!DNL Adobe Photoshop] 中的 [!DNL Adobe Asset Link] 附加元件的連線問題。 |
 | 2025 年 1 月 | [解決  [!DNL InDesign] 中的  [!DNL Adobe Experience Manager (AEM)]  資產連結連線問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25562) | 新文章 | 了解如何解決使用 [!DNL InDesign] 中的 [!DNL Adobe Asset Link] (AAL) 時遇到的連線斷斷續續的問題。 |
-| 2025 年 1 月 | [&#x200B;  [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)]中大型  [!DNL PDF] 的文字擷取限制](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25518) | 新文章 | 了解如何解決 [!DNL Adobe Experience Manager as a Cloud Service] 中大型 [!DNL PDF] 文件由於字元限制而文字擷取不完整的問題。 |
+| 2025 年 1 月 | [  [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)]中大型  [!DNL PDF] 的文字擷取限制](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25518) | 新文章 | 了解如何解決 [!DNL Adobe Experience Manager as a Cloud Service] 中大型 [!DNL PDF] 文件由於字元限制而文字擷取不完整的問題。 |
 | 2025 年 1 月 | [讓使用者可冒充  [!DNL AEM as a Cloud Service]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25539) 中的其他使用者 | 新文章 | 了解 [!DNL AEM as a Cloud Service] 2024.10 版本中允許任何人冒充 [!DNL AEM Author] 中的使用者的新設定。 |
 | 2025 年 1 月 | [在  [!DNL AEMaaCS] 中編寫變更及複製內容時，自訂  [!DNL JCR]  屬性會遺失](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25541) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager as a Cloud Service] (AEMaaCS) 中編寫變更及複製內容時，自訂 [!DNL JCR] 屬性會遺失的問題。 |
 | 2025 年 1 月 | [解決  [!DNL AEM as a Cloud Service - Assets] 中的資產處理問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25525) | 新文章 | 了解如何解決 [!DNL Adobe AEM's Dynamic Media] 模組中密碼同步問題所導致的資產處理問題。 |
@@ -314,7 +312,7 @@ New tutorials published for Adobe [!DNL Analytics] on Experience League.
 
 +++詳細資料
 
-* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -347,7 +345,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Target] {#target}
 
-取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程的存取權。
+取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程。
 
 +++詳細資料
 
@@ -355,7 +353,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 |Published|Name|Type|Description|
 |---------|----|----|-----------|
-|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
+|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
 -->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
@@ -405,10 +403,10 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2025 年 1 月 | [[!DNL IP Whitelisting] 在  [!DNL Adobe Campaign Standard] 中](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25610) | 新文章 | 了解如何將 [!DNL Adobe Campaign Standard] 中的 IP 位址列入白名單。 |
 | 2025 年 1 月 | [設定 [!DNL Adobe Campaign Classic V7] 以存取 [!DNL Google BigQuery]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25618) | 新文章 | 了解如何將 [!DNL Adobe Campaign Classic] (ACC) 與 [!DNL Google Cloud Platform (GCP) BigQuery] 整合。 |
 | 2025 年 1 月 | [追蹤  [!DNL Adobe Campaign Classic] 中的工作流程效能問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25628) | 新文章 | 了解如何在 [!DNL Adobe Campaign Classic] 中改善策略性執行個體的追蹤工作流程的處理時間。 |
-| 2025 年 1 月 | [&#x200B; [!DNL Adobe Campaign Classic]中的結構描述儲存問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25604) | 新文章 | 了解如何解決 [!DNL Adobe Campaign Classic] 開發環境中的結構描述儲存問題。 |
+| 2025 年 1 月 | [ [!DNL Adobe Campaign Classic]中的結構描述儲存問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25604) | 新文章 | 了解如何解決 [!DNL Adobe Campaign Classic] 開發環境中的結構描述儲存問題。 |
 | 2025 年 1 月 | [交付活動物件在  [!DNL Adobe Campaign Classic] 中開啟緩慢](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25451) | 新文章 | 了解如何解決在 [!DNL Adobe Campaign Classic] 中開啟交付活動物件時效能緩慢的問題。 |
 | 2025 年 1 月 | [解決 [!DNL Adobe Campaign]  報告中的 `No available deliveries`](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25538)  | 新文章 | 了解如何解決 [!DNL Adobe Campaign] 報告中 `No available deliveries` 警告的問題。 |
-| 2025 年 1 月 | [&#x200B; [!DNL Adobe Campaign Standard] 中的塞爾維亞文 (西里爾文或拉丁文) 的預設語言代碼](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25598) | 新文章 | 了解 [!DNL Adobe Campaign Standard] 中塞爾維亞文的預設語言代碼。 |
+| 2025 年 1 月 | [ [!DNL Adobe Campaign Standard] 中的塞爾維亞文 (西里爾文或拉丁文) 的預設語言代碼](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25598) | 新文章 | 了解 [!DNL Adobe Campaign Standard] 中塞爾維亞文的預設語言代碼。 |
 | 2025 年 1 月 | [解決  [!DNL Adobe Campaign Managed Cloud] 中的目標對應選擇錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25592) | 新文章 | 了解如何解決在 [!DNL Adobe Campaign Managed Cloud] 中發生目標對應選擇錯誤時的問題。 |
 
 +++
@@ -458,7 +456,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 如需詳細資訊，請參閱：
 
 * 如需發行說明和自助功能，請參閱「[[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)」。
-* 如需產品資訊，請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/tw/products/journey-optimizer-b2b-edition.html)。
+* 如需產品資訊，請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/products/journey-optimizer-b2b-edition.html)。
 
 +++
 
@@ -499,10 +497,10 @@ New tutorials published for Adobe Marketo.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|September 2024|[Attribution AI overview](https://experienceleague.adobe.com/zh-hant/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/attribution-ai-overview)|New video |Discover how Adobe's Attribution AI enhances B2B marketing measurement with sophisticated AI/ML modeling, offering precise attribution insights and eliminating biases for accurate analysis.|
-|September 2024|[Marketo Measure Ultimate overview](https://experienceleague.adobe.com/zh-hant/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/overview)|New video |Learn how Marketo Measure Ultimate allows B2B marketers to gather data from almost any source, including multiple sources of the same type, for thorough attribution. |
-|September 2024|[API Help - How to set the Access token in a variable](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/integrations/api-set-access-token-variable)|New video |Learn how to set up the Postman application and leverage variables to save data into the variable for reusability purposes. You will also learn how to make your first Marketo Engage REST API call to get the access token.|
-|September 2024|[Go live with Dynamic Chat in just 15 minutes](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/dynamic-chat/go-live-in-15-minutes)|New video |Watch a step by step guide to help you go live with your first dialogue using Dynamic Chat in just 15 minutes.| -->
+|September 2024|[Attribution AI overview](https://experienceleague.adobe.com/en/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/attribution-ai-overview)|New video |Discover how Adobe's Attribution AI enhances B2B marketing measurement with sophisticated AI/ML modeling, offering precise attribution insights and eliminating biases for accurate analysis.|
+|September 2024|[Marketo Measure Ultimate overview](https://experienceleague.adobe.com/en/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/overview)|New video |Learn how Marketo Measure Ultimate allows B2B marketers to gather data from almost any source, including multiple sources of the same type, for thorough attribution. |
+|September 2024|[API Help - How to set the Access token in a variable](https://experienceleague.adobe.com/en/docs/marketo-learn/tutorials/integrations/api-set-access-token-variable)|New video |Learn how to set up the Postman application and leverage variables to save data into the variable for reusability purposes. You will also learn how to make your first Marketo Engage REST API call to get the access token.|
+|September 2024|[Go live with Dynamic Chat in just 15 minutes](https://experienceleague.adobe.com/en/docs/marketo-learn/tutorials/dynamic-chat/go-live-in-15-minutes)|New video |Watch a step by step guide to help you go live with your first dialogue using Dynamic Chat in just 15 minutes.| -->
 
 如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/home)首頁
 
@@ -512,7 +510,7 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
+|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
 
 {style="table-layout:auto"} -->
 
@@ -545,12 +543,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -568,7 +566,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 * [Adobe GenStudio for Performance Marketing](https://experienceleague.adobe.com/zh-hant/browse/genstudio-for-performance-marketing) (全自助功能)
 * GenStudio for Performance Marketing 的[發行說明](https://experienceleague.adobe.com/zh-hant/docs/genstudio-for-performance-marketing/user-guide/release-notes#latest)
 * GenStudio for Performance Marketing 的[產品文件](https://experienceleague.adobe.com/zh-hant/docs/genstudio-for-performance-marketing/user-guide/home)
-* [GenStudio for Performance Marketing](https://business.adobe.com/tw/products/genstudio-for-performance-marketing.html) 產品資訊
+* [GenStudio for Performance Marketing](https://business.adobe.com/products/genstudio-for-performance-marketing.html) 產品資訊
 
 +++
 
@@ -595,13 +593,13 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 最新版本：2025 年 2 月 3 日
 
-查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2024 年 12 月 5 日
 
-查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
@@ -625,8 +623,8 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 | Published | Application | Name | Type | Description |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| February 2025 | Applications | [Effortless brand consistency with templates](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresshowto/use-templates.html?lang=zh-Hant) | New video | Learn how to create on-brand content quickly and efficiently across your entire organization. This tutorial walks through how to create fresh new on-brand content that can immediately be shared and localized.|
-| February 2025 | Applications | [Maximize efficiency: Create reusable templates](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-templates.html?lang=zh-Hant) | New video | Learn how bring brand consistency,efficiency,professionalism,and cost savings to your organization with Adobe Express templates. | -->
+| February 2025 | Applications | [Effortless brand consistency with templates](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresshowto/use-templates.html?lang=en) | New video | Learn how to create on-brand content quickly and efficiently across your entire organization. This tutorial walks through how to create fresh new on-brand content that can immediately be shared and localized.|
+| February 2025 | Applications | [Maximize efficiency: Create reusable templates](https://experienceleague.adobe.com/docs/creative-cloud-enterprise-learn/cce-learning-hub/expressoverview/expresstutorials/create-templates.html?lang=en) | New video | Learn how bring brand consistency,efficiency,professionalism,and cost savings to your organization with Adobe Express templates. | -->
 
 如需 [!DNL Document Cloud] 教學課程，請參閱：
 
@@ -666,16 +664,16 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 <!-- ## ![Icon](/assets/certification-badge.png) Certification{#certification}
 
-Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site on Experience League. 
+Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site on Experience League. 
 
 +++Details
 
-The [Experience Cloud Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
+The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
 
 * Available certifications
 * Certification renewals for Adobe applications
 * Certification program updates
 
-And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) on Experience League and start your certification journey today!
+And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
