--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -1,15 +1,15 @@
 ---
-title: Central發行說明 — 2025年1月
+title: 中央發行說明 - 2025 年 1 月
 description: 尋找 Adobe  [!DNL Experience Cloud]  產品和服務的最新發行說明和知識庫問題。了解 Experience League 即將舉辦的活動和新文件。探索  [!DNL Experience Cloud]  應用程式的最新教學課程和其他課程。
 doc-type: release notes
 last-update: January 2025
 author: mfrei
 mini-toc-levels: 2
 exl-id: 2a47d042-6a1c-4896-8935-038f7fda703e
-source-git-commit: 689a26dfa3c681ef91016ed0e0b201254a6054a6
+source-git-commit: 828aac334fdc401738e4934263345b76761a3ae8
 workflow-type: tm+mt
-source-wordcount: '4098'
-ht-degree: 99%
+source-wordcount: '4077'
+ht-degree: 100%
 
 ---
 
@@ -19,15 +19,13 @@ ht-degree: 99%
 
 <!-- ![Banner](assets/release-notes-header.png) -->
 
-[Experience League](https://experienceleague.adobe.com/zh-hant#home) 可幫助您了解 Experience Cloud 及 Adobe 企業應用程式。為了獲得最佳體驗，請登入並在我們的免費資源庫中自訂搜尋，其中包括：
+[Experience League](https://experienceleague.adobe.com/#home) 可幫助您了解 Experience Cloud 及 Adobe 企業應用程式。為了獲得最佳體驗，請登入並在我們的免費資源庫中自訂搜尋，其中包括：
 
 * [產品文件](https://experienceleague.adobe.com/zh-hant/docs)
 * [影片播放清單](https://experienceleague.adobe.com/zh-hant/playlists)
-* [活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)
+* [活動](https://experienceleague.adobe.com/events/)
 * [社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)
-* [支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)
-
-**持續通知：**&#x200B;若要收到關於此頁面更新的每月電子郵件通知，請訂閱 [Adobe 優先產品更新](https://www.adobe.com/tw/subscription/priority-product-update.html)。
+* [支援](https://experienceleague.adobe.com/?support-tab=home#support)
 
 **留下意見反應：**&#x200B;尋找每篇文章或影片底部的「**_這些內容對您有幫助嗎？_**」快顯視窗。您的意見反應會經過整理後傳遞給內容作者。
 
@@ -77,7 +75,7 @@ ht-degree: 99%
 
 發行日期：**2025 年 2 月 5 日**
 
-全新的 [Experience League 首頁](https://experienceleague.adobe.com/zh-hant?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
+全新的 [Experience League 首頁](https://experienceleague.adobe.com/?lang=en) 上會提供由 [!DNL Adobe Target] 所支援的個人化學習推薦內容。
 
 主要功能：
 
@@ -95,7 +93,7 @@ ht-degree: 99%
 
 * **[!DNL Adobe Summit]** | _數位體驗大會_ | 與同行一起聆聽可口可樂公司、JPMorganChase、ServiceNow 等公司高階主管的演說。| **3 月 18 日至 19 日，於拉斯維加斯和線上舉行** | [報名](https://summit.adobe.com/na/?promoid=G4FRYKWG&mv=other)
 
-檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
+檢視所有[即將舉行的活動](https://experienceleague.adobe.com/events/)或瀏覽關於 Experience League 的[過往活動錄影](https://experienceleague.adobe.com/zh-hant/docs/events/experience-league-recorded-events/overview)。
 
 +++
 
@@ -165,7 +163,7 @@ ht-degree: 99%
 | 2024 年 12 月 | [無法為  [!DNL Adobe Experience Platform] 中的  [!DNL HTTP] [!DNL API] 來源新增更多帳戶](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25431) | 新文章 | 了解如何解決當錯誤發生，導致無法將多個 [!DNL HTTP] [!DNL API] 帳戶新增為來源的問題。 |
 | 2024 年 12 月 | [[!DNL Adobe Experience Platform]：雜湊電子郵件上的串流驗證失敗](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25489) | 新文章 | 了解如何解決雜湊電子郵件上的串流驗證失敗時出現的 [!DNL Adobe Experience Platform] 問題。 |
 | 2024 年 12 月 | [使用  [!DNL Privacy API]  在  [!DNL AEP] 中處理設定檔刪除請求時出現差異](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25442) | 新文章 | 了解如何解決使用 [!DNL privacy API] 處理設定檔刪除請求時出現的差異問題。 |
-| 2024 年 12 月 | 在導入  [!DNL AEP Notebooks] 中的  [!DNL DatasetWriter]  模組時，發生 [[!DNL ImportError] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25472) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Platform Notebooks] 中使用 [!DNL DatasetWriter] 時發生 [!DNL ImportError] 的問題。 |
+| 2024 年 12 月 | 在導入  [!DNL AEP Notebooks] 中的  [!DNL DatasetWriter]  模組時，發生 [[!DNL ImportError] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25472) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Platform Notebooks] 中使用 [!DNL DatasetWriter] 時發生 [!DNL ImportError] 的問題。 |
 | 2024 年 12 月 | [在  [!DNL Adobe Experience Platform] 中儘管有大量客群， [!DNL Facebook]  上顯示的客群規模仍然很小](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25440) | 新文章 | 了解如何解決當將客群細分群體從 [!DNL Adobe Experience Platform] 轉移到 [!DNL Facebook] 時，[!DNL Facebook] 上顯示的客群數量顯著小於 Adobe 中大型客群的問題。 |
 | 2024 年 12 月 | [無法將[!UICONTROL 細分群體]推送至  [!DNL Freewheel]  目標](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25350) | 新文章 | 了解如何解決將客群[!UICONTROL 細分群體]從 [!DNL Adobe Experience Platform (AEP)] 推送到 [!DNL Freewheel] 目標時出現的錯誤。 |
 | 2024 年 12 月 | [在  [!DNL Adobe Experience Platform] 中存取非生產環境中的計算屬性](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25432) | 新文章 | 了解如何解決 [!DNL Adobe Experience Platform (AEP)] 非生產環境中無法存取計算屬性的問題。 |
@@ -245,7 +243,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|October 2024|[Create summary-level data sources in Customer Journey Analytics](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/data-views/create-summary-level-data-sources)|Video |Learn how [!DNL Customer Journey Analytics] supports summary-level data that enables you to aggregate and analyze data that isn't organized by individual IDs, such as campaign or product data.| -->
+|October 2024|[Create summary-level data sources in Customer Journey Analytics](https://experienceleague.adobe.com/en/docs/customer-journey-analytics-learn/tutorials/data-views/create-summary-level-data-sources)|Video |Learn how [!DNL Customer Journey Analytics] supports summary-level data that enables you to aggregate and analyze data that isn't organized by individual IDs, such as campaign or product data.| -->
 
 +++
 
@@ -267,7 +265,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 +++詳細資料
 
-### Experience Manager 發行資訊
+### Experience Manager 版本資訊
 
 下一個 [!DNL Experience Manager as a Cloud Service] 版本：**1 月 30 日**
 
@@ -275,7 +273,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 * [最新版本概觀影片](https://experienceleague.adobe.com/zh-hant/docs/events/aemcs-release-update-recordings/overview)
 * [[!DNL Experience Manager] 版本更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home)
-* [&#x200B; [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [ [!DNL Experience Manager] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [[!DNL Experience Manager] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
 * [[!DNL Experience Manager] Cloud Manager 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-manager/content/release-notes/current)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/zh-hant/docs/aem-forms-automated-conversion-service/using/release-notes)
@@ -286,7 +284,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 ### [!DNL Experience Manager] 最新教學課程 {#tutorials-aem}
 
-針對[!DNL Experience Manager as a Cloud Service]發佈的新影片和書面教學課程。
+針對 [!DNL Experience Manager as a Cloud Service].，已發佈新的教學影片和書面教學課程。
 
 | 發佈日期 | 應用程式 | 名稱 | 類型 | 說明 |
 | ----------| ---------- | ---------- | ---------- |---------- |
@@ -309,16 +307,16 @@ New tutorials published for [!DNL Customer Journey Analytics].
 | 2024 年 11 月 | [[!DNL AEM Content Fragment] 模型欄位](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25300) | 新文章 | 了解 [!DNL Adobe Experience Manager (AEM) Content Fragment (CF)] 模型中欄位數量的限制和設定。 |
 | 2024 年 11 月 | [參數 `includeChildren` 在[!UICONTROL 發佈內容樹狀工作流程] (預覽代理程式) 中無法正常運作](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25257) | 新文章 | 了解如何解決客戶創建的工作流程，該工作流程用於將內容片段 ([!DNL CFs]) 發佈到預覽伺服器時，儘管包含了 `includeChildren` 選項，卻停止複製嵌套片段和未發佈的資產的問題。 |
 | 2024 年 11 月 | [在  [!DNL AEM 6.5.18]  中，由於 *[!DNL NullPointerException]*，版本清除失敗。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25299) | 新文章 | 了解如何解決在 [!DNL Adobe Experience Manager (AEM) version 6.5.18] 中發生的已知問題，該問題導致版本清除任務失敗，並出現 `java.lang.NullPointerException`。 |
-| 2024 年 11 月 | [防止在  [!DNL AEM]  指南中意外刪除參考的主題/檔案。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25255) | 新文章 | 了解如何解決當您在 [!DNL Adobe Experience Manager (AEM)] 中刪除在 `maps/rootmaps` 中參考的指南主題/檔案時，未顯示 [!UICONTROL &#x200B; 強制刪除 &#x200B;] 選項以確認刪除的問題。 |
+| 2024 年 11 月 | [防止在  [!DNL AEM]  指南中意外刪除參考的主題/檔案。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25255) | 新文章 | 了解如何解決當您在 [!DNL Adobe Experience Manager (AEM)] 中刪除在 `maps/rootmaps` 中參考的指南主題/檔案時，未顯示 [!UICONTROL  強制刪除 ] 選項以確認刪除的問題。 |
 | 2024 年 11 月 | [如何區分  [!DNL AEM]  指南審核工具中的條件式文字和草稿留言。](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25309) | 新文章 | 了解如何在 [!DNL AEM Guides Review Tool] 中區分條件式文字和草稿留言。 |
-| 2024 年 11 月 |  [!DNL Brand Portal] 中的  [!DNL DMS7]  資產 [*[!DNL Fail to load data]*&#x200B;錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25296) | 新文章 | 了解如何解決在開啟包含 [!DNL DMS7] 資產的資料夾時，在 [!DNL Brand Portal] 中出現的 `Fail to load data` 錯誤。 |
+| 2024 年 11 月 |  [!DNL Brand Portal] 中的  [!DNL DMS7]  資產 [*[!DNL Fail to load data]*錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25296) | 新文章 | 了解如何解決在開啟包含 [!DNL DMS7] 資產的資料夾時，在 [!DNL Brand Portal] 中出現的 `Fail to load data` 錯誤。 |
 | 2024 年 11 月 | [疑難排解  [!DNL AEM as a Cloud Service] 中的  [!DNL HTTP 5XX]  錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25099) | 新文章 | 了解如何解決當 [!DNL HTTP 5XX] 錯誤發生在[!UICONTROL 發佈]層時，通常顯示為 `Service Unavailable` 訊息的問題。 |
 | 2024 年 11 月 | [疑難排解  [!DNL AEM as a Cloud Service] 中的  [!DNL HTTP 429]  錯誤回應](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25100) | 新文章 | 了解如何解決當 [!DNL AEMaaCS] 接收到來自過多請求的 [!DNL HTTP 429] 錯誤，並導致效能問題的問題。 |
 | 2024 年 12 月 | [Dynamic Media 同步使用者建議](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25471) | 新文章 | 了解有關 [!DNL AEM] 與 [!DNL Dynamic Media] 同步的建議。 |
 | 2024 年 12 月 | [請幫我找出是誰從  [!DNL Dynamic Media]  /  [!DNL Scene7] 中刪除了圖片](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25461) | 新文章 | 了解如何解決客戶網站上資產遺失的問題。 |
 | 2024 年 12 月 | [[!DNL Adobe Experience Manager]：確認 [!DNL JavaScript] 覆蓋](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25495)載入成功 | 新文章 | 了解如何解決當您已覆蓋的 [!DNL JavaScript] 無法正常運作時，您可能需要確認其是否正確載入。 |
 | 2024 年 12 月 | [[!DNL Adobe Experience Manager: Service Pack 21]  安裝停滯，顯示 *[!DNL org.apache.sling.installer.core]* 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25476) | 新文章 | 了解如何解決當 `error.log` 中出現 `org.apache.sling.installer.core` 錯誤訊息後，[!DNL AEM 6.5.21] 無法繼續安裝的問題 (與特定的 bundle 版本有關)。 |
-| 2024 年 12 月 | [&#x200B; [!DNL AEM] 中新[!UICONTROL 內容片段]編輯器中的自訂使用者群組鎖定在唯讀模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25396) | 新文章 | 本文說明如何解決在 [!DNL Adobe Experience Manager (AEM) as a Cloud Service] 中，當自訂使用者群組在存取新的[!UICONTROL 內容片段 (CF)] 編輯器時，被鎖定為唯讀模式的問題。 |
+| 2024 年 12 月 | [ [!DNL AEM] 中新[!UICONTROL 內容片段]編輯器中的自訂使用者群組鎖定在唯讀模式](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25396) | 新文章 | 本文說明如何解決在 [!DNL Adobe Experience Manager (AEM) as a Cloud Service] 中，當自訂使用者群組在存取新的[!UICONTROL 內容片段 (CF)] 編輯器時，被鎖定為唯讀模式的問題。 |
 | 2024 年 12 月 | [預設後設資料結構未填寫值](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-25371) | 新文章 | 了解如何解決當修改 `dm_video` 後設資料結構中的欄位標籤時，無法填寫預設的中繼資料值，導致欄位顯示為空的問題。 |
 
 +++
@@ -329,7 +327,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 +++詳細資料
 
-* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -367,7 +365,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 ## [!DNL Target] {#target}
 
-取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程的存取權。
+取得 [!DNL Adobe Target] 的預發行說明、最新發行說明和新教學課程。
 
 +++詳細資料
 
@@ -375,7 +373,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 |Published|Name|Type|Description|
 |---------|----|----|-----------|
-|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
+|July 2024|[[!DNL Adobe Target] bulk profile update [!DNL API] throws *[!DNL Unexpected Error]* when using [!DNL Postman]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24281)|New article| Learn about how to fix the issue when running the [!DNL Target Bulk Profile Update API] throws the *[!DNL Unexpected Error]* message in [!DNL Postman].|
 -->
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
@@ -455,7 +453,7 @@ New tutorials published for Adobe [!DNL Journey Optimizer] on Experience League.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|October 2024|[Configure business rules - Frequency capping](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/configuration/business-rules/configure-frequency-capping-rules)|Video |Learn how to configure frequency capping rules.| -->
+|October 2024|[Configure business rules - Frequency capping](https://experienceleague.adobe.com/en/docs/journey-optimizer-learn/tutorials/configuration/business-rules/configure-frequency-capping-rules)|Video |Learn how to configure frequency capping rules.| -->
 
 ### [!DNL Journey Optimizer] 的更多資源
 
@@ -471,7 +469,7 @@ New tutorials published for Adobe [!DNL Journey Optimizer] on Experience League.
 +++詳細資料
 
 * 請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)，以取得發行說明和自助功能。
-* 請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/tw/products/journey-optimizer-b2b-edition.html) 以了解產品資訊。
+* 請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/products/journey-optimizer-b2b-edition.html) 以了解產品資訊。
 
 +++
 
@@ -512,10 +510,10 @@ New tutorials published for Adobe Marketo.
 
 |Published|Name|Type|Description |
 | -----------| ---------- | ---------- | ---------- |
-|September 2024|[Attribution AI overview](https://experienceleague.adobe.com/zh-hant/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/attribution-ai-overview)|Video |Discover how Adobe's Attribution AI enhances B2B marketing measurement with sophisticated AI/ML modeling, offering precise attribution insights and eliminating biases for accurate analysis.|
-|September 2024|[Marketo Measure Ultimate overview](https://experienceleague.adobe.com/zh-hant/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/overview)|Video |Learn how Marketo Measure Ultimate allows B2B marketers to gather data from almost any source, including multiple sources of the same type, for thorough attribution. |
-|September 2024|[API Help - How to set the Access token in a variable](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/integrations/api-set-access-token-variable)|Video |Learn how to set up the Postman application and leverage variables to save data into the variable for reusability purposes. You will also learn how to make your first Marketo Engage REST API call to get the access token.|
-|September 2024|[Go live with Dynamic Chat in just 15 minutes](https://experienceleague.adobe.com/zh-hant/docs/marketo-learn/tutorials/dynamic-chat/go-live-in-15-minutes)|Video |Watch a step by step guide to help you go live with your first dialogue using Dynamic Chat in just 15 minutes.| -->
+|September 2024|[Attribution AI overview](https://experienceleague.adobe.com/en/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/attribution-ai-overview)|Video |Discover how Adobe's Attribution AI enhances B2B marketing measurement with sophisticated AI/ML modeling, offering precise attribution insights and eliminating biases for accurate analysis.|
+|September 2024|[Marketo Measure Ultimate overview](https://experienceleague.adobe.com/en/docs/marketo-measure-learn/tutorials/marketo-measure-ultimate/overview)|Video |Learn how Marketo Measure Ultimate allows B2B marketers to gather data from almost any source, including multiple sources of the same type, for thorough attribution. |
+|September 2024|[API Help - How to set the Access token in a variable](https://experienceleague.adobe.com/en/docs/marketo-learn/tutorials/integrations/api-set-access-token-variable)|Video |Learn how to set up the Postman application and leverage variables to save data into the variable for reusability purposes. You will also learn how to make your first Marketo Engage REST API call to get the access token.|
+|September 2024|[Go live with Dynamic Chat in just 15 minutes](https://experienceleague.adobe.com/en/docs/marketo-learn/tutorials/dynamic-chat/go-live-in-15-minutes)|Video |Watch a step by step guide to help you go live with your first dialogue using Dynamic Chat in just 15 minutes.| -->
 
 如需最新的產品文件，請參閱 [Marketo 產品文件](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/home)首頁
 
@@ -525,7 +523,7 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
+|April 2024|[What happens when the [!UICONTROL Default Dashboard] object is changed in [!DNL Marketo Measure]](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-24085)|New article| Learn about the effects of changing the [!UICONTROL Default Dashboard] object in [!DNL Marketo Measure] settings.|
 
 {style="table-layout:auto"} -->
 
@@ -562,12 +560,12 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 |Published|Name|Type|Description|
 | -----------| ---------- | ---------- | ---------- |
-|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html?lang=zh-Hant)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
-|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html?lang=zh-Hant)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
-|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html?lang=zh-Hant)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
-|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html?lang=zh-Hant)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
-|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html?lang=zh-Hant)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
-|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html?lang=zh-Hant)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
+|December 2023|[[!DNL Workfront]: Apply layout template](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23173.html)|New article| Learn how to apply the layout template in four ways: [!UICONTROL User profile], [!UICONTROL Job Role], [!UICONTROL Home Team], and [!UICONTROL Home Group].|
+|December 2023|[[!DNL Workfront]: proof failed to generate](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23149.html)|New article| Learn how to resolve the `Proof Failed to Generate` error when you upload a new proof.|
+|December 2023|[[!DNL Fusion]: `Failed to verify connection '52174'. Status Code Error: 500`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23142.html)|New article| Learn how to resolve the [!DNL Workfront Fusion] error, `Failed to verify connection '52174'. Status Code Error: 500`.|
+|December 2023|[[!DNL Workfront]: Stuck export](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23080.html)|New article| Learn how to resolve the issue if your [!UICONTROL Kick-start] export or a [!UICONTROL Resource Planner] export is stuck.|
+|December 2023|[[!DNL Workfront Fusion]: `JWT Connection Error` for [!DNL AEM Assets Fusion]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22911.html)|New article| Learn how to resolve if a `JWT connection error` occurs while configuring a connection for [!DNL AEM Assets as a Cloud Service] using the [!DNL Fusion AEM Assets] module.|
+|December 2023|[Project sharing lists are automatically pre-populated on creating new projects](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23045.html)|New article| Learn how to resolve if project sharing lists get automatically pre-populated.|
 
 {style="table-layout:auto"}
 -->
@@ -584,7 +582,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 * GenStudio for Performance Marketing 的[發行說明](https://experienceleague.adobe.com/zh-hant/docs/genstudio-for-performance-marketing/user-guide/release-notes#latest)
 * GenStudio for Performance Marketing 的[產品文件](https://experienceleague.adobe.com/zh-hant/docs/genstudio-for-performance-marketing/user-guide/home)
-* [GenStudio for Performance Marketing](https://business.adobe.com/tw/products/genstudio-for-performance-marketing.html) 產品資訊
+* [GenStudio for Performance Marketing](https://business.adobe.com/products/genstudio-for-performance-marketing.html) 產品資訊
 
 最新的 [!DNL GenStudio for Performance Marketing] 影片教學課程。
 
@@ -616,11 +614,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
@@ -680,16 +678,16 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 <!-- ## ![Icon](/assets/certification-badge.png) Certification{#certification}
 
-Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site on Experience League. 
+Attention all Adobe certification candidates! Visit the Experience Cloud [Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site on Experience League. 
 
 +++Details
 
-The [Experience Cloud Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
+The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) site is your one-stop shop for all [!DNL Experience Cloud] certification-related content and is updated regularly with:
 
 * Available certifications
 * Certification renewals for Adobe applications
 * Certification program updates
 
-And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/zh-hant/docs/certification/program/overview) on Experience League and start your certification journey today!
+And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
